<resources>
    <string name="app_name">RunningTrackerApp</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Time</item>
        <item>Distance</item>
        <item>Calories Burn</item>
        <item>Speed</item>
    </string-array>
    <string name="today_progress">Today Progress</string>
    <string name="text_title"><![CDATA[Become Healthy & stay resilent]]></string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAsDyPdzdpU7tQVUehybr3i1--kJeWsP4Q</string>
    <string name="let_s_go_run">Let\'s Go Run</string>
    <string name="finish_run">Finish Run</string>
    <string name="time">Time</string>
    <string name="time_format">00:00:00:00</string>
    <string name="cancel_run">Cancel Run</string>
    <string name="runs_date">%1$s</string>
    <string name="runs_avgSpeed">Avg Speed: %1$s Km/h</string>
    <string name="runs_distance">Distance: %1$s</string>
    <string name="runs_totalTime">Time: %1$s</string>
    <string name="runs_calsBurn">%1$s Calories Burned</string>

</resources>